app/design/frontend/Travers/default/styles/blocks/_bluefoot.scss
/* ... */
.copyright {
    padding-left: 20px;
    font-weight: $font-weight__semibold;
    font-size: $font-size__base;
    color: $c-nickel;

    @include max-screen($screen__m) {
        margin-top: $indent__m;
    }
}

.product-grid-items {
    @include min-screen($screen__m) {
        padding: 0 25px;
    }
}

.triple-tout-row {
    display: block !important; // override PageBuilder
    flex-direction: column;
    margin-top: 30px;

    @include min-screen($screen__m) {
        flex-direction: row;
        margin: 40px auto 0 auto;
        padding-left: $indent__s;
        padding-right: $indent__s;
        max-width: 90%;
    }

    .homepage-tout {
        max-width: 580px !important;
        margin: $indent__base auto !important;
        padding: 0 15px !important;
        display: block !important; // override PageBuilder

        figure {
            margin-bottom: 0 !important;
        }

        .pagebuilder-button-secondary {
            @include button--type(primary);
            margin-bottom: 0;

            @include min-screen($screen__m) {
                max-width: 160px;
                width: 100%;
            }
        }

        .tout-header {
            font-weight: $font-weight__bold;
            margin-bottom: $indent__s;
            margin-top: $indent__s;
            font-size: 20px;

            @include min-screen($screen__m) {
                font-size: 24px;
            }
        }

        .tout-description {
            color: $text__color;

            p {
                margin: 0;
                margin-bottom: $indent__xs;
                font-size: $font-size__base--desktop;

                @include min-screen($screen__m) {
                    font-size: 16px;
                }
            }
        }
    }
}

.testimonials {
    margin-bottom: 80px;

    @include min-screen($screen__m) {
        margin: 0 auto 80px;
        padding: 0 $indent__m;
        max-width: 90%;
    }

    .section-heading {
        margin-top: 0;
        margin-bottom: $indent__s;
        font-size: 26px;

        @include min-screen($screen__m) {
            margin-top: $indent__xl;
            font-size: 34px;
        }
    }

    .rating-summary {
        margin-left: -7px;
    }

    .slick-slide {
        width: calc(100vw - 15px) !important; // override PageBuilder/slick

        @include min-screen($screen__m) {
            width: calc(.9 * 50vw - 30px) !important // override PageBuilder/slick
        }

        @include min-screen($screen__l) {
            width: calc(.9 * 25vw - 15px) !important; // override PageBuilder/slick
        }

        .pagebuilder-slide-wrapper [data-element="content"] {
            display: none;
        }

        .pagebuilder-poster-overlay {
            align-items: flex-start !important; // override PageBuilder
            min-height: 250px !important; // override PageBuilder
            padding-top: $indent__s !important; // override PageBuilder

            @include min-screen($screen__m) {
                padding-top: $indent__xl !important; // override PageBuilder
            }

            .pagebuilder-poster-content {
                border: 1px solid $c-border;
                padding: $indent__base;
                min-height: 150px !important; // override PageBuilder

                @include min-screen($screen__m) {
                    min-height: 200px !important; // override PageBuilder
                }
            }
        }
    }

    .slick-dots {
        bottom: $indent__l;

        @include min-screen($screen__m) {
            bottom: -$indent__s;
        }

        @include min-screen($screen__l) {
            display: none !important; // override Slick JS
        }
    }

    .testimonial {
        &-title {
            @include bryant-park-headings-h5;
            font-size: 15px;
            margin: 0;
            letter-spacing: 0;
        }

        &-giver {
            font-size: 13px;
        }

        &-slider {
            margin-bottom: 0 !important; // override Slick
        }

        &-star {
            color: $primary__color;
        }

        &-details,
        &-giver,
        &-title {
            color: $text__color;
            max-width: 350px;
        }
    }
}
/* ... */

